# xuanaiLang

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml  xuan.toml  发布文案.md  开源说明.md
_stage_demo/: .gitignore  README.md  xuan.toml
_stage_demo/src/: main.xy
_stage_demo/tests/: smoke.xy
docs/: architecture.md  roadmap.md  全栈蓝图.md
examples/: ai核心.xy  from_python.py  工具.xy  异常演示.xy  张量演示.xy  循环控制.xy  快速开始.xy  控制流增强.xy  映射演示.xy  模块演示.xy  结构演示.xy
spec/: grammar.ebnf
tests/: test_advanced_features.py  test_cli_features.py  test_control_flow_backend.py  test_error_features.py  test_mapping_features.py  test_pipeline.py  test_project_tools.py  test_struct_features.py  test_transpiler.py  test_vm_backend.py
xuanlang/: __init__.py  ast_nodes.py  cli.py  codegen.py  errors.py  formatter.py  interpreter.py  ir.py  lexer.py  optimizer.py  parser.py  pipeline.py  project.py  scaffold.py  semantic.py  tokens.py  transpilers.py  vm.py
xuanlang/runtime/: __init__.py  ai.py  exceptions.py  prelude.py  records.py  tensor.py
xuanlang/stdlib/: __init__.py  modules.py
