[project]
name = "xuanlang"
version = "0.7.0"
description = "玄言 / XuanLang：面向 AI 原生执行的中英融合高密度编程语言原型，已具备完整前端、三后端执行链、结构化数据能力与 AI 运行时原型"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "开发者星尘_尘夜" }
]
keywords = ["xuanlang", "compiler", "interpreter", "vm", "ai-runtime", "tensor", "experimental-language"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Compilers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
玄言 = "xuanlang.cli:main"
xuanlang = "xuanlang.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
